# llm-math-econ-evaluation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: demo.ipynb
originals/: b7_contract_stochastic_income.py  check_HJB_condition.py  cpi_price_reduction.py  credit_loss_var_calculation.py
problems/: contract_stochastic_income.md  cpi_target_discount.md  credit_var_quantile.md  hjb_discount_threshold.md
rubrics/: rubric.json
solutions/: contract_stochastic_income.md  cpi_target_discount.md  credit_var_quantile.md  hjb_discount_threshold.md
src/econ_math_portfolio/: __init__.py  cli.py  scoring.py
src/econ_math_portfolio/models/: contract_stochastic_income.py  cpi_target_discount.py  credit_var_quantile.py  hjb_discount_threshold.py
src/econ_math_portfolio/utils/: validate.py
src/math_econ_reasoning_portfolio_v3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
submissions/: contract_bad_format.json  contract_good.json  cpi_out_of_bounds.json
tests/: test_failure_modes.py  test_numerics.py  test_scoring.py  test_tasks.py
validators/: __init__.py  contract_stochastic_income.py  cpi_target_discount.py  credit_var_quantile.py  hjb_discount_threshold.py
