[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "math_econ_reasoning_portfolio_v3"
version = "0.3.0"
description = "NDA-safe math + economics reasoning tasks with model-based validators."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8", "mypy>=1.8", "numpy>=2.0", "matplotlib>=3.8", "notebook>=7.0"]

[project.scripts]
econ-math-portfolio = "econ_math_portfolio.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
